syntax = "proto3";
option go_package = "/gen";

// --- Author Service ---

message Author {
    string id  = 1;
    string name  = 2;
    int64 date_of_birth = 3;
}

service AuthorService {
    rpc GetAuthors(GetAuthorsRequest) returns (GetAuthorsResponse);
    rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse);
}

message GetAuthorsRequest {

}

message GetAuthorsResponse {
    repeated Author authors = 1;
}

message GetAuthorRequest {
    string id  = 1;
}

message GetAuthorResponse {
    Author author = 1;
}

// --- Book Service ---

message Book {
    string id = 1;
    string title = 2;
    string author_id = 3;
    string synopsis = 4;
    string image_url = 5;
    string genre = 6;
}

service BookService {
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
}

message GetBooksRequest {
    string title = 1;
    string author_id = 2;
    string genre = 3;
}

message GetBooksResponse {
    repeated Book books = 1;
}

message GetBookRequest {
    string id  = 1;
}

message GetBookResponse {
    Book book = 1;
}